docs/0.5.2/_sources/generated/skbio.sequence.GrammaredSequence.rst.txt
skbio\.sequence\.GrammaredSequence
==================================

.. currentmodule:: skbio.sequence

.. autoclass:: GrammaredSequence

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         
         GrammaredSequence.__bool__
         
         GrammaredSequence.__contains__
         
         GrammaredSequence.__copy__
         
         GrammaredSequence.__deepcopy__
         
         
         GrammaredSequence.__eq__
         
         GrammaredSequence.__format__
         
         GrammaredSequence.__getitem__
         
         
         GrammaredSequence.__iter__
         
         GrammaredSequence.__len__
         
         GrammaredSequence.__ne__
         
         
         
         
         
         GrammaredSequence.__reversed__
         
         
         GrammaredSequence.__str__
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         GrammaredSequence.concat
         
         GrammaredSequence.count
         
         GrammaredSequence.definites
         
         GrammaredSequence.degap
         
         GrammaredSequence.degenerates
         
         GrammaredSequence.distance
         
         GrammaredSequence.expand_degenerates
         
         GrammaredSequence.find_motifs
         
         GrammaredSequence.find_with_regex
         
         GrammaredSequence.frequencies
         
         GrammaredSequence.gaps
         
         GrammaredSequence.has_definites
         
         GrammaredSequence.has_degenerates
         
         GrammaredSequence.has_gaps
         
         GrammaredSequence.has_interval_metadata
         
         GrammaredSequence.has_metadata
         
         GrammaredSequence.has_nondegenerates
         
         GrammaredSequence.has_positional_metadata
         
         GrammaredSequence.index
         
         GrammaredSequence.iter_contiguous
         
         GrammaredSequence.iter_kmers
         
         GrammaredSequence.kmer_frequencies
         
         GrammaredSequence.lowercase
         
         GrammaredSequence.match_frequency
         
         GrammaredSequence.matches
         
         GrammaredSequence.mismatch_frequency
         
         GrammaredSequence.mismatches
         
         GrammaredSequence.nondegenerates
         
         GrammaredSequence.read
         
         GrammaredSequence.replace
         
         GrammaredSequence.to_regex
         
         GrammaredSequence.write



   

